@@ -1,5 +1,5 @@
                                  Asubst
-                                  V3_3
+                                  V3_4
 
 
 1. General syntax
@@ -23,8 +23,8 @@ matching.
 -s or --save : make a copy (<file>.asu) of original file(s).
 -u or --utf8 : process utf-8 sequences.
 -v or --verbose : print each substitution and its line number.
--x or --noregex : <find_pattern> is only the string to find, not a regex. This
-     allows \x00. There is no substring then.
+-x or --noregex : <find_pattern> is only the string to find, without "\n",
+     not a regex. This allows \x00. There is no multiple regex nor substring.
 -- : to stop the list of options. If <find_pattern> is "-pat", then use
      asubst [ { <option> } ] -- "-pat" <replace_pattern>  [ { <file> } ].
 
@@ -73,8 +73,7 @@ The following specific '\' sequences are also handled:
 - "\s, replaced by a space,
 - "\t, replaced by a (horiz) tab,
 - "\xIJ" where IJ is an hexadecimal number (00 to FF or ff) for a byte code.
-  "\x00" is forbidden in find pattern except in mode "noregex" (because it is
-  the C string terminator and is used as such by regex library).
+  "\x00" is forbidden in find pattern except in mode "noregex".
   Beware also that \xIJ is replaced before compiling the regex, so it cannot be
   used to avoid a given character. "[a\x2Dx]" is exactly the same as
   "[a-x]", and "\x0A" is exactly the same as "\n" (it will be used as regex
@@ -89,8 +88,7 @@ The following specific '\' sequences are also handled:
   out of a bracket expression, this becomes a bracket expression, meaning:
   ':' or 'a' or 'l' or 'n' or 'u' or 'm'.
 
-Note that only “\s”, “\t”, “\xIJ” and “\n” are interpreted in mode “noregex”.
-
+Note that only "\s", "\t", "\n" and "\xIJ" are interpreted in "noregexp" mode.
 Finally, beware that some regex expressions are supposed to match a "new line"
 (example [:blank:] within a bracket expression) but will not match in asubst,
 because the input flow/file is decomposed into lines and then each line is
@@ -121,4 +119,16 @@ echo -en "\ntoto\ntiti\ntata" | asubst "\n.*" "\R02"    ->  "tototititata"
 echo -en "tito" | asubst "(.i)(.o)"  "\r12<->\r11"      ->  "to<->ti"
 echo -en "tito" | asubst ".*" "\m\R01"                  ->  "Tito"
 echo -en "toto" | asubst "(.)(.)(..)" "\u\r12\c\r11"    ->  "Otto"
+
+
+6. Differences between regex and noregex modes
+In both modes "\x0A" is the same as "\n" and "\s", "\t" and "\n" are
+interpreted.
+"\n" is allowed in find patern in regex mode and used to separate sub patterns,
+each applying to a line. It is forbidden in noregex mode where the find
+pattern string is always applied several times to each input line.
+"\x00" is forbidden in find patern in regex mode because it is the C string
+terminator and is used as such by regex library). It is allowed in noregex mode.
+"\A" to "\X" are not interpreted in find patern noregex mode.
+In noregex mode, "\rIJ" s forbidden. 
 
